--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fontsource/be-vietnam-pro": "^5.1.1",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -12,6 +13,7 @@
     "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1",
     "react-tabs": "^6.1.0",
+    "react-tailwind": "^0.0.0",
     "sass": "^1.85.0",
     "web-vitals": "^4.2.4"
   },
