--- a/backend-api/bookmanagement_api/src/main/resources/application.properties
+++ b/backend-api/bookmanagement_api/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 spring.application.name=bookmanagement_api
 spring.data.mongodb.uri=mongodb://localhost:27017/bookmanagement-db
+
+
+# C?u hình SMTP Gmail (B?O M?T)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dieptvbh00666@fpt.edu.vn
+spring.mail.password=xictudroussckxji
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
