--- a/frontend-admin/frontend-admin/package.json
+++ b/frontend-admin/frontend-admin/package.json
@@ -9,7 +9,6 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
-    "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -18,6 +17,7 @@
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
     "react-tabs": "^6.1.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "sass": "^1.85.0",
     "web-vitals": "^2.1.4"
