--- a/frontend-client/frontend-client/package.json
+++ b/frontend-client/frontend-client/package.json
@@ -6,6 +6,7 @@
     "@fontsource/be-vietnam-pro": "^5.1.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
