--- a/frontend-admin/frontend-admin/package.json
+++ b/frontend-admin/frontend-admin/package.json
@@ -9,9 +9,11 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-multi-carousel": "^2.8.5",
