--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fontsource/be-vietnam-pro": "^5.1.1",
+    "@hookform/resolvers": "^4.1.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -15,6 +16,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.2.0",
@@ -23,7 +25,8 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "sass": "^1.85.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
