--- a/backend-api/bookmanagement_api/src/main/resources/application.properties
+++ b/backend-api/bookmanagement_api/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=bookmanagement_api
-spring.data.mongodb.uri=mongodb://localhost:27017/bookmanagement-db
+#spring.data.mongodb.uri=mongodb://book_user:Tdl2406@localhost:27017/bookmanagement?authSource=admin&authMechanism=SCRAM-SHA-1
+spring.data.mongodb.uri=mongodb://localhost:27017/bookmanagement
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -8,4 +9,8 @@ spring.mail.password=xictudroussckxji
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+logging.level.org.springframework.data.mongodb=DEBUG
+
+
 
