--- a/frontend-client/frontend-client/package.json
+++ b/frontend-client/frontend-client/package.json
@@ -10,6 +10,7 @@
     "framer-motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-facebook": "^9.0.12",
     "react-icons": "^5.4.0",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.1.5",
