updatE-AI-andreading

--- a/backend-api/bookmanagement_api/src/main/resources/application.properties
+++ b/backend-api/bookmanagement_api/src/main/resources/application.properties
@@ -2,6 +2,13 @@ spring.application.name=bookmanagement_api
 #spring.data.mongodb.uri=mongodb://book_user:Tdl2406@localhost:27017/bookmanagement?authSource=admin&authMechanism=SCRAM-SHA-1
 spring.data.mongodb.uri=mongodb://localhost:27017/bookmanagement
 
+openai.api.key=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
+openai.api.url=https://api.openai.com/v1/chat/completions
+
+spring.autoconfigure.exclude=org.springframework.ai.autoconfigure.openai.OpenAiAutoConfiguration
+
+
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=dieptvbh00666@fpt.edu.vn
