--- a/backend-api/bookmanagement_api/src/main/resources/application.properties
+++ b/backend-api/bookmanagement_api/src/main/resources/application.properties
@@ -6,6 +6,7 @@ openai.api.key=sk-proj-QLW0loEEhoabYAMwZ8DfmBG8RQ4VXnm4dN3WFmiCunhnmM_iytODCKtlc
 openai.api.url=https://api.openai.com/v1/chat/completions
 
 spring.autoconfigure.exclude=org.springframework.ai.autoconfigure.openai.OpenAiAutoConfiguration
+spring.cache.type=simple
 
 
 
