--- a/backend-api/bookmanagement_api/pom.xml
+++ b/backend-api/bookmanagement_api/pom.xml
@@ -48,10 +48,16 @@
 			<version>1.0.0-M6</version>
 		</dependency>
 
-	<!--	<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>-->
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+
+
+		<!--	<dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+            </dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
