--- a/backend-api/bookmanagement_api/src/main/resources/application.properties
+++ b/backend-api/bookmanagement_api/src/main/resources/application.properties
@@ -11,8 +11,10 @@ openai.model.name=mistralai/Mixtral-8x7B-Instruct-v0.1
 
 spring.autoconfigure.exclude=org.springframework.ai.autoconfigure.openai.OpenAiAutoConfiguration
 spring.cache.type=simple
-#gemini.api.key=
 
+# Add Gemini configuration
+gemini.api.key=AIzaSyD9VlawFOrpMJr7O44edESEbL5393pDi6I
+gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
